--- a/react-authentication/package.json
+++ b/react-authentication/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.18.0",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "hbs": "^4.0.4",
     "http-errors": "^1.7.3",
     "mongoose": "^5.6.13",
